# blog_rs

./: .env  Cargo.toml  README.md
migrations/: 20220102113012_create_posts.sql  20220102121143_create_seed_posts.sql
src/: main.rs
src/model/: post.rs
src/templates/: edit.html  index.html  show.html
