[package]
name = "hello_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.18"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
handlebars = { version = "4.1.6", features = ["dir_source"] }
log = "0.4.14"
serde = "1.0.133"
serde_json = "1.0.74"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "uuid", "chrono" ] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
rusty-hook = "0.11.2"
